--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,9 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        {% block title %}
+            <h1>Titre Sortir</h1>
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
