--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,8 @@
         {% block body %}
         <h1>Test</h1>
         {% endblock %}
+
+        {% block title %}
+        <h1>Test</h1>
     </body>
 </html>
