--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,14 @@
         <title>{% block title %}Projet Sortir{% endblock %}</title>
 
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+
+
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+
 
     </head>
     <body>
@@ -22,7 +21,7 @@
         </header>
         <main class="container">
         {% block body %}
-            <h1>Test</h1>
+
         {% endblock %}
 
         </main>
