navbar avec login

--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,5 +1,6 @@
 <nav class="navbar">
     <ul>
         <li><a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a></li>
+        <li><a href="{{ path('app_login') }}" title="Login">Login</a></li>
     </ul>
 </nav>
