--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,12 +6,14 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+       {{ form_widget(registrationForm) }}
 
-        <button type="submit" class="btn">Register</button>
+
+<div class="checkbox mb-3">
+    <label>
+        <input type="checkbox" name="_remember_me">Remember me
+    </label>
+</div>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
