--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,6 +1,16 @@
 <nav class="navbar">
-    <ul>
-        <li><a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a></li>
-        <li><a href="{{ path('app_login') }}" title="Login">Login</a></li>
+    <ul class="nav justify-content-end">
+        <li class="nav-item ml-2">
+            <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
+        </li>
+        <li class="nav-item ml-2">
+            <a href="{{ path('app_accueil') }}" title="Mon Profil">Mon profil</a>
+        </li>
+        <li class="nav-item ml-2">
+            <a href="{{ path('app_accueil') }}" title="Accueil">Se connecter</a>
+        </li>
+        <li class="nav-item ml-2">
+            <a href="{{ path('app_accueil') }}" title="Accueil">Se deconnecter</a>
+        </li>
     </ul>
 </nav>
