--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -4,13 +4,13 @@
             <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
         </li>
         <li class="nav-item ml-2">
-            <a href="{{ path('app_accueil') }}" title="Mon Profil">Mon profil</a>
+            <a href="" title="Mon Profil">Mon profil</a>
         </li>
         <li class="nav-item ml-2">
-            <a href="{{ path('app_accueil') }}" title="Accueil">Se connecter</a>
+            <a href="{{ path('app_login') }}" title="Accueil">Se connecter</a>
         </li>
         <li class="nav-item ml-2">
-            <a href="{{ path('app_accueil') }}" title="Accueil">Se deconnecter</a>
+            <a href="{{ path('app_logout') }}" title="Accueil">Se deconnecter</a>
         </li>
     </ul>
 </nav>
