--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -4,7 +4,7 @@
             <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
         </li>
         <li class="nav-item ml-2">
-            <a href="" title="Mon Profil">Mon profil</a>
+            <a href="{{ path('participant_monProfil') }}" title="Mon Profil">Mon profil</a>
         </li>
         <li class="nav-item ml-2">
             <a href="{{ path('app_login') }}" title="Accueil">Se connecter</a>
