creation lien de twig accueil vers twig création sortie

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -7,4 +7,6 @@
 {% block body %}
     <h1>Page d'accueil!</h1>
 
+    <a href="{{ path('sortie_creation') }}" class="">Créer une sortie</a>
+
 {% endblock %}
