--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 
 <div class="container-header">
             <div class="logo">
-                <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo.png') }}" alt="logo sortir.com"></a>
+                <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/MicrosoftTeams-image.png') }}" alt="logo sortir.com"></a>
             </div>
             {% include('inc/nav.html.twig') %}
 </div>
