--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,14 +3,17 @@
         <li class="nav-item ml-2">
             <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
         </li>
-        <li class="nav-item ml-2">
-            <a href="{{ path('participant_monProfil') }}" title="Mon Profil">Mon profil</a>
-        </li>
-        <li class="nav-item ml-2">
-            <a href="{{ path('app_login') }}" title="Accueil">Se connecter</a>
-        </li>
-        <li class="nav-item ml-2">
-            <a href="{{ path('app_logout') }}" title="Accueil">Se deconnecter</a>
-        </li>
+        {% if app.user %}
+            <li class="nav-item ml-2">
+                <a href="{{ path('participant_monProfil', {'id':app.user.id})}}" title="Mon Profil">Mon profil {{ app.user.pseudo }}</a>
+            </li>
+            <li class="nav-item ml-2">
+                <a href="{{ path('app_logout') }}" title="Se déconnecter">Se déconnecter</a>
+            </li>
+        {% else %}
+            <li class="nav-item ml-2">
+                <a href="{{ path('app_login') }}" title="Se connecter">Se connecter</a>
+            </li>
+        {% endif %}
     </ul>
 </nav>
