--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,15 @@
             {% include('inc/nav.html.twig') %}
 </div>
         </header>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class=" flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+
         <main class="container">
         {% block body %}
 
