--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -8,6 +8,7 @@
     {{ form_start(editForm) }}
 
 
-    {{ form_end(editForm) }}
 
+    {{ form_end(editForm) }}
+    <button class="btn btn-danger" type="button" name="annuler" onclick="history.go(0)">Annuler</button>
 {% endblock %}
