--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -7,6 +7,6 @@
 {% block body %}
     <h1>Page d'accueil!</h1>
 
-    <a href="{{ path('sortie_creation') }}" class="">Créer une sortie</a>
+    <a href="{{ path('sortie_creation',{'id':})}}" class="">Créer une sortie</a>
 
 {% endblock %}
