--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -5,4 +5,8 @@
 {% block body %}
     <h1>Créer une sortie</h1>
 
+    {{ form_start(sortieForm) }}
+    {{ form_widget(sortieForm) }}
+    {{ form_end(sortieForm) }}
+
 {% endblock %}
