Enregistrement nouvelle sortie en BDD, Modif nav, Modif redirection page par défaut (login)

--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -8,5 +8,5 @@
     {{ form_start(sortieForm) }}
     {{ form_widget(sortieForm) }}
     {{ form_end(sortieForm) }}
-
+    <button class="btn btn-danger" type="button" name="annuler" onclick="history.go(0)">Annuler</button>
 {% endblock %}
