--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,22 +1,65 @@
+nav  {
+    margin: 53px auto 0;
+    position: relative;
+    right:5%;
+
+    width: 480px;
+    height: 50px;
+    background-color: #194a7b;
+    border-radius: 8px;
+    font-size: 0;
+
+}
+nav a {
+    line-height: 50px;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    text-decoration: none !important;
+
+    text-align: center;
+    color: white;
+    cursor: pointer;
+}
+
+nav a:hover{
+    background-color: white;
+    color: #1a2841;
+
+}
+
+
+
 .logo img{
-    width: 300px;
+    width: 50%;
 }
 
 .container-header{
-
+     width: 100%;
     display: flex;
-    flex-direction: row;
+
     justify-content: space-between;
     padding: 20px;
 
 
 }
 
-.logo{
-
+.flash {
+    padding: 15px;
+    font-weight: bold;
+    font-size: 1.4rem;
+    margin: 1rem 0;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
 }
 
-.navbar{
-    display: flex;
-   justify-items: flex-end;
+.flash-success {
+    background-color: #5393c9;
 }
+
+
+
+
