Ajout du formulair de recherche des sorties. Ajout de la méthode findSearch dans les SortieRepository.php

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -9,4 +9,8 @@
 
     <a href="{{ path('sortie_creation',{'id': app.user.id})}}" class="">Créer une sortie</a>
 
+
+    {{ form_start(form)}}
+
+    {{ form_end(form) }}
 {% endblock %}
