--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -24,9 +24,9 @@
                 <thead>
 
                 <tr>
-                    <th scope="col">Nom</th>
+                    <th scope="col">Nom de la sortie</th>
                     <th scope="col">Date de la sortie</th>
-                    <th scope="col">Cloture</th>
+                    <th scope="col">Clôture</th>
                     <th scope="col">Inscrits/places</th>
                     <th scope="col">Etat</th>
                     <th scope="col">Inscrit</th>
@@ -37,17 +37,14 @@
                 <tbody>
                 {% for sortie in sorties %}
                 <tr>
-
                     <td>{{ sortie.nom }}</td>
                     <td>{{ sortie.infosSortie }}</td>
                     <td>datedeFin</td>
-                    <td>{{ sortie.nbInscriptionsMax }}</td>
+                    <td>{{ sortie.participants.count }}/{{ sortie.nbInscriptionsMax }}</td>
                     <td>{{ sortie.etat.libelle }}</td>
                     <td>inscrit</td>
                     <td>{{ sortie.organisateur.nom }}</td>
-                    <td><button onclick="inscriptionSortie">s'inscrire</button></td>
-
-
+                    <td><button onclick="inscriptionSortie()">s'inscrire</button></td>
                 </tr>
                 {% endfor %}
                 </tbody>
