--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,6 +1,5 @@
 {# <nav class="navbar">
      <ul class="nav justify-content-end">
-
         {% if app.user %}
             <li class="nav-item ml-2">
                 <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
@@ -13,26 +12,20 @@
             </li>
         {% endif %}
     </ul>
-
-
 </nav>#}
+
   {% if app.user %}
-<nav>
-    <ul class="nav justify-content-center">
-
-
+    <nav>
+        <ul class="nav justify-content-center">
             <li class="nav-item mr-4">
                 <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
             </li>
             <li class="nav-item mr-4">
-                <a href="{{ path('participant_monProfil', {'id':app.user.id})}}" title="Mon Profil">Mon profil {{ app.user.pseudo }}</a>
+                <a href="{{ path('participant_monProfil', {'id':app.user.id})}}" title="Mon Profil">Mon profil</a>
             </li>
             <li class="nav-item">
                 <a href="{{ path('app_logout') }}" title="Se déconnecter">Se déconnecter</a>
             </li>
-
-    </ul>
-
-
-</nav>
+        </ul>
+    </nav>
   {% endif %}
