--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Page d'accueil!</h1>
-
-    <a href="{{ path('sortie_creation',{'id': app.user.id})}}" class="">Créer une sortie</a>
+    <div>Date du jour : <br>Participant :
+    </div>
+    <h2>Filtrer les sorties</h2>
 
     <div>
         {{ form_start(form)}}
@@ -17,12 +17,8 @@
     </div>
 
     <div>
-
-
-
-            <table class="table">
-                <thead>
-
+        <table class="table">
+            <thead>
                 <tr>
                     <th scope="col">Nom de la sortie</th>
                     <th scope="col">Date de la sortie</th>
@@ -33,26 +29,22 @@
                     <th scope="col">Organisateur</th>
                     <th scope="col">Actions</th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 {% for sortie in sorties %}
-                <tr>
-                    <td>{{ sortie.nom }}</td>
-                    <td>{{ sortie.infosSortie }}</td>
-                    <td>datedeFin</td>
-                    <td>{{ sortie.participants.count }}/{{ sortie.nbInscriptionsMax }}</td>
-                    <td>{{ sortie.etat.libelle }}</td>
-                    <td>inscrit</td>
-                    <td>{{ sortie.organisateur.nom }}</td>
-                    <td><button onclick="inscriptionSortie()">s'inscrire</button></td>
-                </tr>
+                    <tr>
+                        <td>{{ sortie.nom }}</td>
+                        <td>{{ sortie.dateHeureDebut.format('d/m/y h:i') }}</td>
+                        <td>{{ sortie.dateLimiteInscription.format('d/m/y') }}</td>
+                        <td>{{ sortie.participants.count }}/{{ sortie.nbInscriptionsMax }}</td>
+                        <td>{{ sortie.etat.libelle }}</td>
+                        <td>inscrit</td>
+                        <td>{{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom }}</td>
+                        <td><button onclick="inscriptionSortie()">s'inscrire</button></td>
+                    </tr>
                 {% endfor %}
-                </tbody>
-            </table>
-
-
-
-
+            </tbody>
+        </table>
     </div>
-
+    <a href="{{ path('sortie_creation',{'id': app.user.id})}}" class="">Créer une sortie</a>
 {% endblock %}
