Modification app.css réduction des marges

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
         {% endfor %}
 
 
-        <main class="container">
+        <main class="container-fluid">
         {% block body %}
 
         {% endblock %}
