--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,4 @@
+
 nav  {
     margin: 53px auto 0;
     position: relative;
@@ -59,7 +60,26 @@ nav a:hover{
 .flash-success {
     background-color: #5393c9;
 }
+body{
+    margin-bottom: 20px;
 
+}
+.btnValidation{
+    background-color: #194a7b;
+    color: white;
+
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+
+
+}
+.main{
+    padding-left: 5%;
+    padding-right: 5%;
+}
 
 
 
