modif bouton créer une sortie

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -52,6 +52,6 @@
                 </tbody>
             </table>
         </div>
-        <button class="btn btnValidation " ><a href="{{ path('sortie_creation',{'id': app.user.id})}}" class=""></a>Créer une sortie</button>
+        <a href="{{ path('sortie_creation',{'id': app.user.id})}}" class="btn btnValidation">Créer une sortie</a>
     </div>
 {% endblock %}
