--- a/templates/sortie/afficher.html.twig
+++ b/templates/sortie/afficher.html.twig
@@ -3,6 +3,51 @@
 {% block title %}Afficher une sortie{% endblock %}
 
 {% block body %}
+
     <h1>Afficher une sortie</h1>
+    <div>
+        <table>
+            {% for sortie in sorties %}
+            <tr>
+                <td>Nom de la sortie: <td>
+                <td>{{ sortie.nom }}<td>
+                <td>Campus: <td>
+                <td>{{ sortie.campus }}<td>
+            </tr>
+            <tr>
+                <td>Date et heure de la sortie: <td>
+                <td>{{ sortie.dateHeureDebut.format('d/m/y h:i') }} }}<td>
+                <td>Lieu: <td>
+                <td>{{ sortie.lieu }}<td>
+            </tr>
+            <tr>
+                <td>Date limite d'inscription: <td>
+                <td>{{ sortie.dateLimiteInscription.format('d/m/y') }}<td>
+                <td>Rue: <td>
+                <td>{{ sortie.rue }}<td>
+            </tr>
+            <tr>
+                <td>Nombre de places: <td>
+                <td>{{ sortie.nbInscriptionsMax }}<td>
+                <td>Code postal: <td>
+                <td>{{ sortie.lieu }}<td>
+            </tr>
+            <tr>
+                <td>Durée: minutes<td>
+                <td>{{ sortie.duree }}<td>
+                <td>Latitude: <td>
+                <td><td>
+            </tr>
+            <tr>
+                <td>Description et infos: <td>
+                <td>{{ sortie.infosSortie }}<td>
+                <td>Longitude: <td>
+                <td><td>
+            </tr>
+    {% endfor %}
+
+            </tbody>
+        </table>
+    </div>
 
 {% endblock %}
