--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -7,6 +7,7 @@
 
     {{ form_start(sortieForm) }}
     {{ form_widget(sortieForm) }}
+    <a href="{{ path('sortie_nouveau_lieu') }}">Ajouter lieu</a>
     {{ form_end(sortieForm) }}
     <button class="btn btn-danger" type="button" name="annuler" onclick="history.go(0)">Annuler</button>
 {% endblock %}
