--- a/public/css/app.css
+++ b/public/css/app.css
@@ -73,13 +73,29 @@ body{
     display: flex;
     flex-direction: column;
     align-items: end;
-
-
 }
 .main{
     padding-left: 5%;
     padding-right: 5%;
 }
+.tableaux{
+    display: inline-flex;
+    width: 500px;
+    margin-right: 30px;
+    margin-left: 100px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+}
+#tabMarge{
+    margin-left: 300px;
+}
+h1{
+    text-align: center;
+}
+.participantsInscrits{
+    margin-left: 2%;
+}
+
 
 
 
