--- a/templates/sortie/afficher.html.twig
+++ b/templates/sortie/afficher.html.twig
@@ -3,65 +3,91 @@
 {% block title %}Afficher une sortie{% endblock %}
 
 {% block body %}
+
     <h1>Afficher une sortie</h1>
-    <div>
-        <table>
-            <tr>
-                <td>Nom de la sortie: <td>
-                <td>{{ sortie.nom }}<td>
-                <td>Campus: <td>
-                <td>{{ sortie.campus }}<td>
-            </tr>
-            <tr>
-                <td>Date et heure de la sortie: <td>
-                <td>{{ sortie.dateHeureDebut.format('d/m/y h:i') }} }}<td>
-                <td>Lieu: <td>
-                <td>{{ sortie.lieu.nom }}<td>
-            </tr>
-            <tr>
-                <td>Date limite d'inscription: <td>
-                <td>{{ sortie.dateLimiteInscription.format('d/m/y') }}<td>
-                <td>Rue: <td>
-                <td>{{ sortie.lieu.rue}}<td>
-            </tr>
-            <tr>
-                <td>Nombre de places: <td>
-                <td>{{ sortie.nbInscriptionsMax }}<td>
-                <td>Code postal: <td>
-                <td>{{ sortie.lieu.ville }}<td>
-            </tr>
-            <tr>
-                <td>Durée: <td>
-                <td>{{ sortie.duree }} minutes<td>
-                <td>Latitude: <td>
-                <td><td>
-            </tr>
-            <tr>
-                <td>Description et infos: <td>
-                <td>{{ sortie.infosSortie }}<td>
-                <td>Longitude: <td>
-                <td><td>
-            </tr>
-            </tbody>
-        </table>
-    <h2>Liste des<div>
-        <div>
-        <table class="table mt-4">
+
+<div id="tabMarge" class="tableaux">
+    <table class="table table-striped table-bordered ">
+
+        <thead>
+        <tr>
+
+            <th scope="col">Nom de la sortie</th>
+            <td scope="col">{{ sortie.nom }}</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+
+            <th>Date et heure de la sortie</th>
+            <td>{{ sortie.dateHeureDebut.format('d/m/y h:i') }}</td>
+        </tr>
+        <tr>
+
+            <th>Date limite d'inscription</th>
+            <td>{{ sortie.dateLimiteInscription.format('d/m/y') }}</td>
+        </tr>
+        <tr>
+
+            <th>Nombre de places</th>
+            <td>{{ sortie.nbInscriptionsMax }}</td>
+        </tr>
+        <tr>
+
+            <th>Durée</th>
+            <td> {#{{ sortie.duree }} #}xxxx minutes</td>
+        </tr>
+        <tr>
+
+            <th>Description et infos</th>
+            <td>{{ sortie.infosSortie }}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+    <div class="tableaux">
+        <table class="table table-striped table-bordered ">
             <thead>
             <tr>
-                <th scope="col">Pseudo</th>
-                <th scope="col">Nom</th>
+
+                <th scope="col">Campus</th>
+                <td>{{ sortie.campus }}</td>
             </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>{{ sortie.participants.nom }}</td>
-                    <td>{{ sortie.participants.prenom }}</td>
-                </tr>
+            <tr>
+
+                <th>Lieu</th>
+                <td>{{ sortie.lieu.nom }}</td>
+            </tr>
+            <tr>
+
+                <th>Rue</th>
+                <td>{{ sortie.lieu.rue}}</td>
+            </tr>
+            <tr>
+
+                <th>Code postal</th>
+                <td>{{ sortie.lieu.ville.codePostal }}</td>
+            </tr>
+            <tr>
+
+                <th>Latitude</th>
+                <td>non renseigné</td>
+            </tr>
+            <tr>
+
+                <th>Longitude</th>
+                <td>non renseigné</td>
+            </tr>
             </tbody>
         </table>
     </div>
 
+    <div class="participantsInscrits">
+    <h2>Liste des participants inscrits</h2>
 
+    </div>
 
 {% endblock %}
