--- a/templates/sortie/afficher.html.twig
+++ b/templates/sortie/afficher.html.twig
@@ -88,6 +88,20 @@
     <div class="participantsInscrits">
     <h2>Liste des participants inscrits</h2>
 
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Pseudo</th>
+                    <th scope="col">Nom</th>
+                </tr>
+                {% for participant in sortie.participants %}
+                <tr>
+                    <td>{{ participant.pseudo }}</td>
+                    <td>{{ participant.nom }}</td>
+                </tr>
+                {% endfor %}
+                </thead>
+            </table>
     </div>
 
 {% endblock %}
