--- a/templates/sortie/afficher.html.twig
+++ b/templates/sortie/afficher.html.twig
@@ -96,7 +96,7 @@
                 </tr>
                 {% for participant in sortie.participants %}
                 <tr>
-                    <td>{{ participant.pseudo }}</td>
+                    <td><a href="{{ path('detail_participant', {'id': participant.id}) }}">{{ participant.pseudo }}</a> </td>
                     <td>{{ participant.nom }} {{ participant.prenom }}</td>
                 </tr>
                 {% endfor %}
