--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+
         {% endblock %}
 
 
@@ -46,5 +47,6 @@
         <footer>
 
         </footer>
+        <script src="{{ asset('css/javascript.js') }}"></script>
     </body>
 </html>
