--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -14,7 +14,7 @@
     {{ form_row(sortieForm.infosSortie) }}
     {{ form_row(sortieForm.etat) }}
     {{ form_row(sortieForm.lieu) }}
-    <button class="btn btn-dark lieubtn" onclick="">ajouter un lieu</button>
+    <button class="btn btn-dark lieubtn" onclick="">+</button>
 
 <div class="lieu">
 
