--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,13 +26,9 @@ nav a {
 }
 
 nav a:hover{
-    background-color: white;
-    color: #1a2841;
-
+    transform: scale(1.3);
+    color: white;
 }
-
-
-
 .logo img{
     width: 50%;
 }
@@ -99,7 +95,30 @@ h1{
 .participantsInscrits{
     margin-left: 2%;
 }
-
-
+.intitule{
+    text-align: center;
+}
+.intitule1{
+    text-align: justify;
+}
+.pseudoDetail{
+    color: black;
+    text-decoration: none !important;
+}
+.tdHover{
+    text-align: center;
+    text-decoration: none !important;
+    color: black;
+}
+.tdHover:hover{
+    text-align: center;
+    transform: scale(1.2);
+    color: black;
+}
+thead{
+    background-color: #194a7b;
+    color: white;
+    font-weight: bold;
+}
 
 
