Ajout page création d'un nouveau lieu + redirection sur, création sortie.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,4 +121,11 @@ thead{
     font-weight: bold;
 }
 
-
+.btnNewLieu{
+   display: inline-flex;
+}
+.btn-dark{
+    height: 40px;
+    width: 40px;
+    margin-left: 5px;
+}
